@@ -382,15 +382,34 @@ It is different from other audio server efforts in that
 it has been designed from the ground up to be suitable for low-latency
 professional audio work. 
 <p>
-Ecasound provides multiple ways to communicate with JACK servers. To
-directly input or output to soundcard, use <strong>-i jack_alsa</strong> and <strong>-o
-jack_alsa</strong>. To communicate with other apps, use
-<strong>jack_auto,remote_clientname</strong>. To just create ports without making
-any automatic connections, there are <strong>jack</strong> and
-<strong>jack_generic,local_portprefix</strong>.
+Ecasound provides multiple ways to communicate with JACK servers. 
+To create a JACK input or output object, one should use <strong>-i jack</strong> and 
+<strong>-o jack</strong>. These create JACK client ports "ecasound:in_N" and 
+"ecasound:out_n" respectively ('N' is replaced by the channel number).
+Ecasound automatically creates one JACK port for each channel (number
+of channels is set with <strong>-f:bits,channels,rate</strong> option).
+<p>
+It is important to note that by default JACK ports are not connected
+anywhere (e.g. to soundcard input/outputs, or to other apps). One thus
+has to connect the ports with an external program (e.g. "QJackCtl"
+or "jack_connect").
+<p>
+For simple use scanerios, ecasound provides a way to autoconnect
+the ecasound ports. This can be done with by giving the peer client
+name as the second parameter to the "jack" object, e.g. <strong>-o jack,clientname</strong>.
+As an example, <strong>-o jack,system</strong> will create an output that is
+automatically connected to outputs of the default system soundcard.
+The client parameter can be omitted, in which case no automatic
+connections are made.
+<p>
+If one needs to change the port prefix (e.g. "in" in client
+name "ecasound:in_N"), the prefix can be specified as the third
+parameter to "jack" object, e.g. <strong>-o jack,,fxout</strong>. Also the
+third parameter can be omitted, in which case the default prefixes
+"in" and "out" are used.
 <p>
 Additionally global JACK options can be set using 
-<strong>-G:jack,client_name,operation_mode</strong>. 'client_name' 
+<strong>-G:jack,client_name,operation_mode</strong> option. 'client_name' 
 is the name used when registering ecasound to the JACK system. 
 If 'operation_mode' is "notransport",  ecasound will ignore 
 any transport state changes in the JACK-system; in mode 
@@ -401,7 +420,12 @@ position-change events; and mode "sendrecv" (the default) which
 is a combination of the two previous modes.
 <p>
 More details about ecasound's JACK support can be found
-from ecasound user's guide.
+from Ecasound User's Guide.
+<p>
+<strong>Depracated interfaces</strong> Ecasound 2.5 and older supported
+"jack_alsa" and "jack_generic" object types, but these are
+now replaced by a more generic "jack" interface, and thus are
+now deprecated (they work but are no longer documented).
 <p>
 <p><dt><strong>Libaudiofile</strong><dd>
 If libaudiofile support was enabled at compile-time, this
